--- a/2023-10-26-double-loop-approach.org
+++ b/2023-10-26-double-loop-approach.org
@@ -18,3 +18,226 @@ tags: []
 
 The [[https://www.youtube.com/watch?v=83w-jFcwiX0][source]]
 
+* Intro
+
+So you read 30 books last year and you took copious amounts of notes
+on everything but how do you actually implement these concepts and
+figure out which ones work best in the situations you're in how do you
+know what's effective and what's not the answer double loop learning
+we can think of double loop learning as learning based on bayesian
+updating the modification of goals rules or ideas in response to new
+evidence and experience it might sound like another piece of corporate
+jargon but double loop learning
+
+* Single Loop Learning
+
+cultivates creativity and innovation for both organizations and
+individuals before we get into double loop learning let's first look
+at single loop learning the first time we aim for a goal follow a rule
+or make a decision we're engaging in single loop learning this is
+where many people get stuck and keep making the same mistakes if we
+question our approaches and make honest self-assessments we shift into
+double loop learning in this stage we assess our biases question our
+mental models and look for areas where we can improve we collect data
+seek feedback and gauge our performance but we can't learn from
+experience without reflection only reflection allows us to distill the
+experience into something we can learn from
+
+* Thermostat Analogy
+
+in teaching smart people how to learn business theorist chris aguirres
+compares single loop learning to a typical thermostat it operates in a
+homeostatic loop always seeking to return the room to the temperature
+at which the thermostat is set a thermostat might keep the room steady
+but it doesn't learn by contrast double loop learning would entail the
+thermostat is becoming more efficient over time is the room at the
+optimum temperature what's the humidity like today would a lower
+temperature be more comfortable the thermostat would then test each
+idea and repeat the process double loop learning on the other hand is
+a part of action science
+
+* The Learning Dilemma
+
+the study of how we act in difficult situations individuals and
+organizations need to learn if they want to succeed or even survive
+but few of us pay much attention to exactly how we learn and how we
+can optimize the process even smart well-educated people can struggle
+to learn from experience we all know someone who's been at the office
+for 20 years and claims to have 20 years of experience but they really
+have one year repeated 20 times many of us are so focused on solving
+problems as they arise that we don't take the time to reflect on them
+after we've dealt with them and this mission dramatically limits our
+ability to learn from the experiences of course we want to reflect but
+we're busy and we have more problems to solve not to mention that
+reflecting on our idiocy is painful and we're predisposed to avoid
+pain and protect our egos reflection however is an example of the
+approach we call first order negative second order positive it's got
+very visible short-term costs it takes time and honest self-assessment
+about our shortcomings but it pays off in spades in the future the
+problem is that the future is not visible today so slowing down today
+to go faster at some future point seems like a bad idea to many plus
+with the payoff being so far in the future it's hard to connect to the
+reflection today this is the learning dilemma many skilled people
+excel at single loop learning it's what we learn in academic
+situations but if we're accustomed only to success double loop
+learning can ignite defensive behavior this is why learning can be so
+difficult it's not because we aren't competent but because we resist
+learning out of a fear of seeming incompetent smart people aren't used
+to failing so they struggle to learn from their mistakes and often
+respond by blaming someone else
+
+* Smart People
+
+as a jurors put it their ability to learn shuts down precisely at the
+moment they need it the most in the same way a muscle strengthens at
+the point of failure we learn best after dramatic errors the problem
+is that single loop
+
+* The Problem
+
+processes can be self-fulfilling
+consider managers who assume their employees are inept they deal with
+this by micromanaging and making every decision themselves their
+employees have no opportunity to learn so they become discouraged they
+don't even try to make their own decisions this is a self-perpetuating
+circle for double loop learning to happen the managers would have to
+let go a little allowing someone else to make minor decisions offer
+guidance instead of intervention leave room for mistakes in the long
+run everyone would benefit the same applies to teachers who think
+their students are going to fail an exam the teachers might become
+condescending and assign simple work when the exam rolls around guess
+what many of the students do badly the teachers think that they were
+right so the same thing happens the next semester many of the leaders
+ajira studied blamed any problems on unclear goals insensitive and
+unfair leaders and stupid clients rather than making useful
+assessments complaining might be cathartic but it doesn't let us learn
+agiras explained that this defensive reasoning happens even when we
+want to improve single loop learning just happens to be a way of
+minimizing effort we would go mad if we had to rethink our response
+every time someone asks us how we are for example so ajiris explains
+everyone develops their own theory of action a set of rules that
+individuals use to design and implement their own behavior as well as
+to understand the behavior of others most of the time we don't even
+consider our theory of action it's only when asked to explain it that
+the divide between how we act and how we think we act becomes apparent
+identifying the gap between our espoused theory of action and what
+we're actually doing is the hard part the first step ajiris
+
+* Stop Getting Defensive
+
+identified is to stop getting defensive instead he advocates for
+collecting and analyzing relevant data what conclusions can we draw
+from experience how can we test them what evidence do we need to prove
+a new idea is correct
+
+* Change Our Mental Models
+
+the next step is to change our mental models break apart paradigms
+question where conventions came from pivot and make reassessments if
+necessary problem solving isn't a linear process we can't make one
+decision and then sit back and await success edgier has found that
+many professionals are skilled at teaching others yet find it
+difficult to recognize the problems they themselves cause like
+galilean relativity it's easy to focus on other people it's much
+harder to look inward and face complex challenges doing so brings up
+guilt embarrassment and defensiveness as john gray put it if there's
+anything unique about the human animal it's that it has the ability to
+grow knowledge at an accelerating rate while being chronically
+incapable of learning from experience
+
+* Habits
+
+when we repeat a single loop process it becomes a habit each
+repetition requires less and less effort we stop questioning or
+reconsidering it especially if it does the job or appears to while
+habits are essential in many areas of our lives they don't serve us
+well if we want to keep improving
+
+* Single Loop
+
+for that we need to push the single loop to the point of failure to
+strengthen how we act in the double loop it's a bit like the feynman
+technique we have to dismantle what we know to see how solid it truly
+is one example is a typical five day nine to five work week most
+organizations stick to it year after year they don't reconsider the
+efficacy of a schedule designed for industrial revolution factory
+workers this is single loop learning it's just the way things are done
+but not necessarily the smartest way to do things the decisions made
+early on in an organization have the greatest long-term impact
+changing them in the months years or even decades that follow becomes
+a non-option how to structure the work week is one such initial
+decision that becomes invisible
+
+* How to Structure
+
+as gk chesterton put it the things we see every day are the things we
+never see at all sure a nine to five schedule might not be causing any
+obvious problems the organization might be perfectly successful but
+that doesn't mean things can't improve it's the equivalent of a child
+continuing to crawl because it gets them around why try walking if
+crawling does the job why look for another option if the current one
+is working a growing number of organizations are realizing that
+conventional work weeks might not be the most effective way to
+structure the work time they're using double loop learning to test
+other structures some organizations are trying shorter work days or
+four day work weeks or allowing people to set their own schedules
+managers then keep track of how the tested structures affect
+productivity and profits over time it becomes apparent whether the new
+schedule is better than the old one 37 signals is one company using
+double loop learning to restructure their work week ceo jason fried
+began experimenting a few years ago he tried out a 4-day 32-hour work
+week he gave employees the whole of june off to explore new ideas he
+cut back on meetings and created quiet spaces for focused work rather
+than following conventions 37 signals became a laboratory looking for
+ways for improving over time what worked and what didn't became
+obvious double loop learning is about data backed experimentation not
+aimless tinkering if a new idea doesn't work it's time to try
+something else
+
+* David Chang
+
+in an op-ed for the new york times sweeney and gosvel gave the example
+of david chang double loop learning turned his failing noodle bar into
+an award-winning empire after apprenticing as a cook in japan mr chang
+started his own restaurant yet his early efforts were ineffective he
+found himself overworked and struggling to make money he knew his
+cooking was excellent so how could he make it profitable many people
+would have quit or continued making irrelevant tweaks until the whole
+endeavor failed instead mr chang shifted from single to double loop
+learning a process of making honest self-assessments began one of his
+foundational beliefs was that the restaurant should serve only noodles
+but he decided to change the menu to reflect his skills in time it
+paid off the crowds came rave reviews piled up awards followed and
+unimaginable opportunities presented themselves this is what double
+loop learning looks like in action questioning everything and starting
+from scratch if necessary
+
+* Josh Wadeskin
+
+josh wadeskin's approach as explained in the art of learning is
+similar after reaching the heights of competitive chess weights can
+turned his focus to martial arts he began with tai chi chuan martial
+arts and chess are on the surface completely different but waits can
+use double loop learning for both he progressed quickly because he was
+willing to lose matches if doing so meant he could learn he noticed
+that other martial arts students had a tendency to repeat their
+mistakes letting fruitless habits become ingrained like the managers
+at jairus worked with students grew defensive when challenged they
+wanted to be right even if it prevented their learning in contrast
+waitskin viewed practice as experiment each session was an opportunity
+to test his beliefs he mastered several martial arts earning a black
+belt in jiu jitsu and winning a world championship
+
+* Conclusion
+
+ajir has found that organizations learn best when people know how to
+communicate no surprise there leaders need to listen actively and open
+up exploratory dialogues so that problematic assumptions and
+conventions can be revealed a juris identified some key questions to
+consider what is the current theory in use how does it differ from
+proposed strategies and goals what unspoken rules are being followed
+and are they detrimental what could change and how forget the details
+what's the bigger picture meaningful learning doesn't happen without
+focused effort double loop learning is the key to turning experience
+into improvements information into action and conversations into
+progress you
